--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a discord bot!",
   "main": "index.js",
   "dependencies": {
+    "@discordjs/uws": "11.149.1",
     "@zuzak/owo": "^1.2.0",
     "bufferutil": "^4.0.1",
     "canvas": "^2.5.0",
@@ -12,21 +13,29 @@
     "dd-trace": "^0.14.0",
     "discord.js": "github:discordjs/discord.js",
     "express": "^4.16.4",
+    "ffmpeg-binaries": "4.0.0",
+    "ffmpeg-static": "2.5.0",
     "libsodium-wrappers": "^0.7.4",
     "mathjs": "^6.0.2",
     "merge-images": "^1.1.0",
     "mysql": "^2.17.1",
     "node-dogstatsd": "0.0.7",
+    "node-opus": "0.3.2",
+    "opusscript": "0.0.6",
+    "owoify": "^1.0.2",
     "patreon": "^0.4.1",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "require-dir": "^1.2.0",
+    "sodium": "3.0.2",
     "systeminformation": "^4.4.1",
     "translate-google": "^1.3.5",
     "urban-dictionary": "^2.2.1",
     "weeb.js": "^1.6.2",
     "workerpool": "^3.1.2",
-    "ws": "^7.1.1"
+    "ws": "^7.1.1",
+    "zlib-sync": "0.1.5",
+    "zucc": "0.1.2"
   },
   "devDependencies": {},
   "scripts": {
